# cellarium-ml

./: .gitattributes  .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/workflows/: ci.yml  docker.yml  docs.yml  pypi.yml  testpypi.yml
cellarium/: __init__.py
cellarium/ml/: __init__.py  cli.py
config/: onepass.yaml
configs/: lr_config.yaml  onepass_config.yaml  pca_config.yaml
docker/: Dockerfile  build_docker.sh
docs/source/: callbacks.rst  cli.rst  conf.py  core.rst  data.rst  distributed.rst  distributions.rst  index.rst  layers.rst  lr_schedulers.rst  models.rst  module.rst  optim.rst  preprocessing.rst  trainer.rst  transforms.rst  utilities.rst  utils.rst
example_configs/: scvi_config.yaml  scvi_config_Kidney_muto_rna.yaml  scvi_config_cas_50m_homo_sapiens_no_cancer.yaml  scvi_config_cellxgene_liver.yaml  scvi_config_cellxgene_lung.yaml  scvi_config_cellxgene_lung_subset.yaml  scvi_config_extract.yaml  scvi_config_gut_cell_atlas_normed.yaml  scvi_config_gut_cell_atlas_raw.yaml  scvi_config_human_heart_atlas.yaml  scvi_config_human_pancreas_rna.yaml  scvi_config_mouse_Liver_rna.yaml  scvi_config_pbmc.yaml  scvi_config_pbmc_subset_genes.yaml  scvi_config_pbmc_test_masked.yaml  scvi_config_tucker_heart_atlas.yaml  scvi_gut_config.yaml  scvi_lake_kidney_config.yaml  scvi_pbmc_config.yaml  scvi_predict_jejunum_small_intestine.yaml  scvi_reconstruct_config.yaml  scvi_train_config.yaml  scvi_train_jejunum_small_intestine.yaml
examples/: README.md  README.rst  classifier.py  ddp_distributed_sampler.py  ddp_iterable_dataset.py  geneformer.py  incremental_pca.py  mean_std.py  onepass_mean_var_std.py  onepass_mean_var_std_config.yaml  probabilistic_pca.py  tdigest.py
examples/cli_workflow/: README.md  amortized_nmf_config_template.yaml  arrow_converter.yaml  cli_workflow.rst  hvg_seurat_v3_train_config.yaml  ipca_train_config.yaml  lr_resume_train_config.yaml  lr_train_config.yaml  nmf_config.yaml  nmf_config_template.yaml  nmf_heart_config.yaml  nmf_heart_config_default.yaml  nmf_heart_pred_config.yaml  nmf_simulated_config.yaml  onepass_train_config.yaml  scvi_config_pbmc.yaml  scvi_config_pbmc_test.yaml  scvi_config_pbmc_train.yaml  scvi_config_pmbc_covariates.yaml  scvi_pbmc_config.yaml  scvi_pbmc_predict_config.yaml  scvi_pbmc_predict_flow_config.yaml  scvi_pbmc_reconstruct_config.yaml  scvi_pbmc_reconstruct_flow_config.yaml  scvi_pbmc_train_config.yaml  scvi_pbmc_train_flow_config.yaml  socam_train_config.yaml  welford_onepass_covariance_train_config.yaml
examples/configs/: cellarium_gpt.yaml
examples/other_configs/: scvi_pbmc_predict_config.yaml  scvi_pbmc_reconstruct_config.yaml  scvi_pbmc_train_config.yaml
notebooks/: SOCAM_quickstart_tutorial.ipynb  analyze_coarsed_dataset.py  analyze_coarsed_dataset_old.py  cas_metacell_exploration.ipynb  cellariumgpt_jacobian_example.ipynb  cellariumgpt_noise_prompting_gene_sets.ipynb  cnmf_all_in_one.ipynb  cnmf_all_in_one__bigrun.ipynb  cnmf_data_preprocess.ipynb  cnmf_demo.ipynb  cnmf_demo_haley.ipynb  cnmf_fitting.ipynb  cnmf_hvg_calling.ipynb  coarse_cellxgene.py  coarse_cellxgene.sh  conversion.R  download_upload_cellxgene.sh  geneformer_demo.ipynb  highly_variable_genes.ipynb  imputation_training.ipynb  lys_cellxgene_queries.ipynb  mehrtash_test.ipynb  mup_mlp.ipynb  nmf.ipynb  nmf_heart_config_notebook.yaml  nmf_human_heart_consensu_tutorial.ipynb  notebooks_functions.py  part_i.ipynb  predict_test.py  script_cellariumgpt_perturbseq.py  script_jacobian_all_cell_types.py  script_random_noise_prompt_all_cell_types.py  scvi_demo.ipynb  scvi_demo.py  scvi_demo_get_debatched_data.ipynb  scvi_demo_glycosylation_example.ipynb  scvi_demo_normalizing_flow_prior.ipynb  scvi_demo_old.py  seurat_analysis.R  umap_test.ipynb  (+1 more)
notebooks/assay_conversion/: 01_assay_conversion.ipynb  01_assay_conversion.py  02_visualize_assay_conversion.ipynb  03_01_umap_assay_conversion.ipynb  04_metacell_assay_conversion.ipynb  run_assay_conversion.sh
notebooks/cellariumgpt_inference/: 00_basic_prompting.ipynb  01_fixed_point_iters.ipynb  02_jacobian_calculation.ipynb  02_jacobian_calculation.py  03_gene_networks.ipynb  04_metadata_evaluation__updated.ipynb  05_make_metacells.ipynb  06_jacobian_calculation_metacell.ipynb  06_jacobian_calculation_metacell.py  07_gene_networks_metacell.ipynb  xx_mean_expression_debug.ipynb  (+8 more)
pipelines/: cellariumgpt_noise_prompting.wdl  cellariumgpt_perturbseq.wdl  cellxgene_query.wdl  jacobian.wdl
scripts/: linear_response_analysis.py  linear_response_network_adjacency.py  linear_response_network_adjacency_concordance.py  linear_response_network_metrics.py  linear_response_network_pipeline.py  linear_resposne_network_pipeline_runner.py  metadata_prediction_analysis.py  run_all.sh  run_linear_response_analysis.sh  run_metadata_prediction_analysis.sh  run_metadata_prediction_analysis_deep.sh  update_headers.py
scvid/: __init__.py  _version.py
test/: common.py  test_cli.py  test_data.py  test_dataset.py  test_distributed_anndata.py  test_examples.py  test_geneformer.py  test_ipca.py  test_onepass_mean_std.py  test_onepass_mean_var_std.py  test_ppca.py  test_read_h5ad.py  test_sampler.py  test_schema.py  test_tdigest.py  test_transforms.py
tests/: common.py  test_attention.py  test_bayesian_nmf.py  test_callbacks.py  test_cellarium_gpt.py  test_cli.py  test_contrastive_mlp.py  test_core.py  test_datamodule.py  test_dataset.py  test_distributed_anndata.py  test_gene_network_analysis.py  test_geneformer.py  test_gpt.py  test_highly_variable_genes.py  test_hvg_seurat_v3.py  test_imputation.py  test_ipca.py  test_logistic_regression.py  test_module.py  test_mup.py  test_mup_cerebras.py  test_nmf.py  test_nmf_amortized.py  test_onepass_mean_var_std.py  test_ppca.py  test_schema.py  test_scvi.py  test_socam.py  test_tdigest.py  test_transforms.py  test_utils.py
tmp_configs/: train_smallseq_gpu1_basicnet.yaml  train_smallseq_gpu1_contrastive.yaml  train_smallseq_gpu2_basicnet.yaml  train_smallseq_gpu2_contrastive.yaml
(+336 files in other folders)
