[build-system]
requires = ["setuptools>=41", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "scvi-distributed"
authors = [
  { name="Yerdos Ordabayev", email="yordabay@broadinstitute.org" },
  { name="Mehrtash Babadi", email="mehrtash@broadinstitute.org" },
]
description = "Machine learning library for single-cell data analysis"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "anndata",
  "boltons",
  "braceexpand",
  "crick @ git+https://github.com/dask/crick.git",
  "google-cloud-storage",
  "jsonargparse[signatures]",
  "lightning>=2.0.0",
  "pyro-ppl",
  "torch>=2.0.0",
]

dynamic = ["version"]

[project.optional-dependencies]
lint = [
    "black[jupyter]",
    "ruff",
]
mypy = ["mypy"]
test = [
  "pytest",
  "pytest-xdist",
  "tensorboard",
]
dev = ["scvi-distributed[lint,mypy,test]"]

[project.urls]
"Homepage" = "https://cellarium.ai"
"Source Code" = "https://github.com/cellarium-ai/cellarium-ml"
"Bug Tracker" = "https://github.com/cellarium-ai/cellarium-ml/issues"
"Discussion Forum" = "https://github.com/cellarium-ai/cellarium-ml/discussions"

[tool.setuptools-git-versioning]
enabled = true

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]

[tool.mypy]
ignore_missing_imports = true
