[build-system]
requires = ["setuptools>=41", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "cellarium-ml"
authors = [
  { name="Yerdos Ordabayev", email="yordabay@broadinstitute.org" },
  { name="Mehrtash Babadi", email="mehrtash@broadinstitute.org" },
]
description = "Machine learning library for single-cell data analysis"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "anndata==0.11.3",
  "boltons",
  "braceexpand",
  "crick>=0.0.4",
  "google-cloud-storage",
  "jsonargparse[signatures]==4.27.7",
  "lightning>=2.2.0",
  "numpy==1.26.4",
  "pyro-ppl>=1.9.1",
  "pytest",
  "torch==2.6.0",
  "torchvision",
  "transformers",
  "scikit-optimize==0.10.2",
  "pymde==0.1.18",
  "pynndescent!=0.5.10",  # https://github.com/lmcinnes/umap/issues/1032
  "scipy==1.15.1",
  "igraph==0.11.8",
  "colorcet==3.1.0",
  "leidenalg==0.10.2",
  "networkx==3.4.2",
  "plotly==6.0.0",
  "scanpy==1.10.4",
  "h5py==3.12.1",
  "joblib==1.4.2",
  "tqdm==4.67.1",
  "more_itertools",
  "pandas==2.2.3",
]

dynamic = ["version"]

[project.optional-dependencies]
lint = ["ruff"]
mypy = ["mypy", "types-PyYAML"]
test = [
  "pytest-xdist",
  "tenacity",
  "tensorboard",
  "torchvision",
]
docs = [
  "nbsphinx",
  "Pillow",
  "seaborn>=0.13.0",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-copybutton",
]
inference = [
  "scikit-optimize==0.10.2",
  "pymde==0.1.18",
  "pynndescent!=0.5.10",  # https://github.com/lmcinnes/umap/issues/1032
  "scipy==1.15.1",
  "igraph==0.11.8",
  "colorcet==3.1.0",
  "leidenalg==0.10.2",
  "networkx==3.4.2",
  "plotly==6.0.0",
  "scanpy==1.10.4",
  "h5py==3.12.1",
  "joblib==1.4.2",
  "tqdm==4.67.1",
  "more_itertools",
  "pandas==2.2.3",
]
dev = ["cellarium-ml[docs,lint,mypy,test,inference]"]

[project.scripts]
cellarium-ml = "cellarium.ml.cli:main"

[project.urls]
"Homepage" = "https://cellarium-ai.github.io/cellarium-ml"
"Source Code" = "https://github.com/cellarium-ai/cellarium-ml"
"Bug Tracker" = "https://github.com/cellarium-ai/cellarium-ml/issues"
"Discussion Forum" = "https://github.com/cellarium-ai/cellarium-ml/discussions"

[tool.setuptools.packages.find]
include = ["cellarium.*"]

[tool.setuptools.package-data]
"cellarium.ml" = ["py.typed"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}.post{ccount}"

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
check_untyped_defs = true
warn_unreachable = true
